[develop]
script_dir=$base/lib/gantry_services
[install]
install_scripts=$base/lib/gantry_services

# [options]
# packages = find:
# install_requires =
# 	setuptools

# [options.package_data]
# * = *.srv

# [options.entry_points]
# console_scripts = 
# 	gantry_capture_service = gantry_services.GantryCaptureService:main

# [tool:rosidl_generate_interfaces]
# gantry_services/srv/Capture.srv